--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,8 @@ html {
   scroll-behavior: smooth;
 }
 :root {
-  --background: #070707;
+  /* --background: #070707; */
+  --background: #000000;
   --text-white: #FFFFFF;
   --light-blue: #38BDF8;
 }
@@ -12,7 +13,7 @@ html {
   --color-background: var(--background);
   --color-light-blue: var(--light-blue);
   --font-primary: 'Inter', sans-serif;
-  --max-width: 1350px;
+  --max-width: 1370px;
   --breakpoint-max-700: 700px;
   --breakpoint-max-570: 570px;
 }
