--- a/app/globals.css
+++ b/app/globals.css
@@ -5,9 +5,12 @@ html {
 :root {
   --background: #000000;
   --text-white: #FFFFFF;
-  --light-blue: #0083FF; 
   --slate-960: #030507; 
+  --light-blue: #0D9AFF;
+  
+  /* --light-blue: #0083FF; */
   /* --light-blue: #38BDF8; */
+  /* --light-blue: #038BEC; */
   /* --background: #070707; */
 }
 @theme inline {
@@ -158,7 +161,7 @@ section {
   --glow-color: rgba(0, 0, 0, 0);
 }
 .framework-card::before {
-  content: "";
+  content: '';
   position: absolute;
   inset: 10%;
   background-color: var(--glow-color);
